# licensepp

./: CMakeLists.txt  Makefile  README.md  crow_all.h  dockerfile  license-manager.h  license.enc  license.lic  license_device.cpp  main.cc  main.cpp  main.h
